updated all pages

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="apme.html">APME</a></li>
+                      <li><a href="apme.html">APMEA</a></li>
 
                       <li><a href="#">Brochure</a></li>
 
@@ -461,35 +461,6 @@
         </div>
       </div>
       <!-- td-about-area-end -->
-
-      <!-- td-cta-area-start -->
-      <div class="td-cta-area">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div
-                class="td-cta-2-wrap bg-position"
-                data-background="assets/img/cta/cta-bg.png"
-              >
-                <div class="row align-items-end">
-                  <div class="col-lg-5">
-                    <div class="td-cta-2-content mb-20">
-                      <span class="td-cta-2-subtitle d-inline-block mb-5"
-                        >Don’t Miss Our Future Updates!</span
-                      >
-                      <h2 class="td-cta-2-title">Get Registered Today!</h2>
-                    </div>
-                  </div>
-                  <div class="col-lg-7">
-                    <div class="td-cta-2-form mb-25"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- td-cta-area-end -->
     </main>
     <!-- main-area-end -->
     <!-- footer-area-start -->
@@ -527,7 +498,7 @@
                         <li><a href="committe.html">Committees</a></li>
                         <li><a href="team.html">Speakers</a></li>
                         <li><a href="sightseeing.html">Sightseeing</a></li>
-                        <li><a href="apme.html">APME</a></li>
+                        <li><a href="apme.html">APMEA</a></li>
                       </ul>
                     </div>
                   </div>
