--- a/committe.html
+++ b/committe.html
@@ -114,7 +114,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="apme.html">APME</a></li>
+                      <li><a href="apme.html">APMEA</a></li>
 
                       <li><a href="#">Brochure</a></li>
 
@@ -321,7 +321,7 @@
                   data-wow-duration="1.5s"
                   data-wow-delay="0.3s"
                 >
-                  Our Committee
+                  Organizing Committees
                 </h2>
                 <div
                   class="td-breadcrumb-list wow td-animetion-right"
@@ -333,7 +333,7 @@
                     <li>
                       <i class="fa-sharp fa-solid fa-angle-right fa-fw"></i>
                     </li>
-                    <li>Committee</li>
+                    <li>Committees</li>
                   </ul>
                 </div>
               </div>
@@ -427,7 +427,7 @@
                 <br />
                 <b
                   >Dr. K. Anji Reddy, <br />
-                  Academic Director, ASRAM Medical College</b
+                  Academic Director, ASRAMS</b
                 >
               </li>
 
@@ -438,7 +438,7 @@
                 />
                 <br /><b
                   >Dr. K. Hanumantha Rao, <br />
-                  CEO, ASRAM Medical College</b
+                  CEO, ASRE Society</b
                 >
               </li>
             </ul>
@@ -610,6 +610,7 @@
                   <li>Dr. Ravichitra K. N.</li>
                   <li>Dr. Jannu Pavani</li>
                   <li>Dr. Maneesha P</li>
+                  <li>Dr. S. Chaya Devi</li>
                 </ul>
               </div>
             </div>
@@ -675,6 +676,7 @@
                     <br />
                     <b>Dr. U. Vijay Kumar</b>
                   </li>
+                  <li>Dr. K Naresh</li>
                   <li>Dr. Ravichitra K. N.</li>
                   <li>Dr. Rabiya Baseri Nelofar</li>
                   <li>Mrs. Nagalla Shobha</li>
@@ -712,6 +714,23 @@
                     />
                     <span class="role-title"></span
                     ><b> Mr. K. S. Anjaneya Raju</b>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card committee-card">
+              <div class="card-header">WEBSITE COORDINATOR</div>
+              <div class="card-body">
+                <ul>
+                  <li>
+                    <img
+                      src="./assets/img/doctorimages/COMMITTEE MEMBERS/chaitanya.png"
+                      alt=""
+                    />
+                    <span class="role-title"></span
+                    ><b> Dr. A. Chaitanya Varma</b>
                   </li>
                 </ul>
               </div>
@@ -757,7 +776,7 @@
                         <li><a href="committe.html">Committees</a></li>
                         <li><a href="team.html">Speakers</a></li>
                         <li><a href="sightseeing.html">Sightseeing</a></li>
-                        <li><a href="apme.html">APME</a></li>
+                        <li><a href="apme.html">APMEA</a></li>
                       </ul>
                     </div>
                   </div>
