--- a/sightseeing.html
+++ b/sightseeing.html
@@ -93,7 +93,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="apme.html">APME</a></li>
+                      <li><a href="apme.html">APMEA</a></li>
 
                       <li><a href="#">Brochure</a></li>
 
@@ -333,17 +333,22 @@
               <span class="td-section-subtitle td-section-subtitle-2 mb-20"
                 >Sightseeing</span
               >
-              <h2 class="td-section-title mb-10">
-                Insights from Designer experts Meetup
-              </h2>
-              <p class="td-section-text">
-                Like previous year this year we are arranging world marketing<br />
-                summit 2025. Its the gathering of all the big
-              </p>
+              <h2 class="td-section-title mb-10">Sightseeing</h2>
             </div>
           </div>
         </div>
         <div class="row">
+          <p class="td-section-text">
+            Eluru, a vibrant city blending academics, culture, and agriculture,
+            is located close to the capital of Andhra Pradesh, Amravathi. The
+            beautiful temple of Dwaraka Tirumala is dedicated to Lord
+            Venkateswara. Known as "Chinna Tirupati," it is considered a
+            spiritual alternative to the famous Tirupati temple. Alluri Sitarama
+            Raju Academy of Medical Sciences, Eluru campus is located 5 kms away
+            from the Eluru railway station and is a vibrant home to teachers,
+            staff and students, with green lawns and pretty pink flowers in the
+            spring
+          </p>
           <div class="row align-items-center">
             <div class="col-xl-4 col-lg-5">
               <div class="td-schedule-3-thumb p-relative">
@@ -375,10 +380,12 @@
                             19:15 a.m. – 07:15 a.m.
                           </span>
                         </div> -->
-                <p class="mb-25 para">(Other attractions on your own)</p>
               </div>
             </div>
           </div>
+          <h3 class="mb-25 sighttext">
+            Other Attractions to Explore at Your Leisure
+          </h3>
           <div
             class="col-xl-4 col-lg-6 col-md-6 wow fadeInLeft"
             data-wow-duration="1.5s"
@@ -691,7 +698,7 @@
                         <li><a href="committe.html">Committees</a></li>
                         <li><a href="team.html">Speakers</a></li>
                         <li><a href="sightseeing.html">Sightseeing</a></li>
-                        <li><a href="apme.html">APME</a></li>
+                        <li><a href="apme.html">APMEA</a></li>
                       </ul>
                     </div>
                   </div>
