--- a/team.html
+++ b/team.html
@@ -25,6 +25,78 @@
     <link rel="stylesheet" href="assets/css/default.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <style>
+      h1 {
+        border-bottom: 2px solid #007bff;
+        padding-bottom: 10px;
+      }
+
+      .section {
+        background-color: white;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0, 91, 187, 0.1);
+        padding: 25px;
+        border: 1px solid #cce0ff;
+        margin-bottom: 30px;
+      }
+
+      .section-title {
+        background-color: #1c3c80;
+        color: white;
+        padding: 12px 20px;
+        border-radius: 6px 6px 0 0;
+        margin: 25px 0;
+        font-size: 1.2em;
+      }
+
+      .members-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 20px;
+      }
+
+      .member-card {
+        background-color: #f0f7ff;
+        border-left: 4px solid #1c3c80;
+        padding: 15px;
+        border-radius: 0 6px 6px 0;
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
+
+      .member-card:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 6px 15px rgba(0, 91, 187, 0.15);
+      }
+
+      .member-title {
+        font-weight: bold;
+        color: #1c3c80;
+        margin-bottom: 5px;
+        font-size: 1.1em;
+      }
+
+      .member-name {
+        font-weight: 600;
+        margin-bottom: 5px;
+        color: #061942;
+        font-size: 20px;
+      }
+
+      .member-location {
+        color: #666;
+        font-style: italic;
+        font-size: 0.9em;
+      }
+
+      .honorary-members {
+        background: linear-gradient(135deg, #f0f7ff 0%, #e1effe 100%);
+        border: 1px solid #cce0ff;
+      }
+
+      @media (max-width: 768px) {
+        .members-grid {
+          grid-template-columns: 1fr;
+        }
+      }
       .sPkContainer {
         max-width: 900px;
         margin: 20px auto;
@@ -379,8 +451,7 @@
               >
                 <span class="td-section-subtitle mb-25">Spekaers</span>
                 <h2 class="td-section-title">
-                  Our Distinguished & Knowledgable<br />
-                  Event Speakers
+                  Our Distinguished & Medical Educators
                 </h2>
               </div>
             </div>
@@ -403,18 +474,7 @@
               >
                 Eminent Medical Educators
               </button>
-              <!-- <button
-                class="nav-link"
-                id="v-pills-health-tab"
-                data-bs-toggle="pill"
-                data-bs-target="#v-pills-health"
-                type="button"
-                role="tab"
-                aria-controls="v-pills-health "
-                aria-selected="false"
-              >
-                Eminent Medical Educators
-              </button> -->
+
               <button
                 class="nav-link"
                 id="v-pills-life-tab"
@@ -427,18 +487,18 @@
               >
                 Esteemed Speakers
               </button>
-              <!-- <button
-                  class="nav-link"
-                  id="v-pills-veichele-tab"
-                  data-bs-toggle="pill"
-                  data-bs-target="#v-pills-veichele"
-                  type="button"
-                  role="tab"
-                  aria-controls="v-pills-veichele"
-                  aria-selected="false"
-                >
-                  Day 04 - jan 13, 2025
-                </button> -->
+              <button
+                class="nav-link"
+                id="v-pills-health-tab"
+                data-bs-toggle="pill"
+                data-bs-target="#v-pills-health"
+                type="button"
+                role="tab"
+                aria-controls="v-pills-health "
+                aria-selected="false"
+              >
+                Facilitators & Moderators
+              </button>
             </div>
             <div
               class="tp-contact-form-wrapper tp-black-bg9 tab-content"
@@ -646,94 +706,7 @@
                 </div>
               </div>
 
-              <!-- TAB TWO -->
-              <div
-                class="tab-pane"
-                id="v-pills-health"
-                role="tabpanel"
-                aria-labelledby="v-pills-health-tab"
-              >
-                <div class="row">
-                  <!-- speakers  -->
-                  <div
-                    class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
-                    data-wow-duration=".9s"
-                    data-wow-delay=".2s"
-                  >
-                    <div
-                      class="td-team-item mb-25 bg-position p-relative"
-                      data-background="assets/img/team/bg.png"
-                    >
-                      <div class="td-team-content">
-                        <h3 class="td-team-member-name mb-0">
-                          <a href="team.html">Dr. Sravanan Sanniyasi </a>
-                        </h3>
-                        <!-- <span class="td-team-member-position"
-                          >- Dr. G. Gangaraju Oration</span
-                        > -->
-                      </div>
-                      <div class="td-team-thumb text-center">
-                        <img
-                          src="http://atomicityit.com/demos/asram/uploads/Saravanan%20New%20CV%20copy.pdf"
-                          alt=""
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
-                    data-wow-duration=".9s"
-                    data-wow-delay=".2s"
-                  >
-                    <div
-                      class="td-team-item mb-25 bg-position p-relative"
-                      data-background="assets/img/team/bg.png"
-                    >
-                      <div class="td-team-content">
-                        <h3 class="td-team-member-name mb-0">
-                          <a href="team.html">Dr. John Stephan </a>
-                        </h3>
-                        <!-- <span class="td-team-member-position"
-                          >- Dr. G. Gangaraju Oration</span
-                        > -->
-                      </div>
-                      <div class="td-team-thumb text-center">
-                        <img
-                          src="assets/img/doctorimages/EME SPEAKERS/john.jpg"
-                          alt=""
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
-                    data-wow-duration=".9s"
-                    data-wow-delay=".2s"
-                  >
-                    <div
-                      class="td-team-item mb-25 bg-position p-relative"
-                      data-background="assets/img/team/bg.png"
-                    >
-                      <div class="td-team-content">
-                        <h3 class="td-team-member-name mb-0">
-                          <a href="team.html">Dr. Margaret Shathi </a>
-                        </h3>
-                        <!-- <span class="td-team-member-position"
-                          >- Dr. G. Gangaraju Oration</span
-                        > -->
-                      </div>
-                      <div class="td-team-thumb text-center">
-                        <img
-                          src="assets/img/doctorimages/EME SPEAKERS/shathi.jpg"
-                          alt=""
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- TAB THREE -->
+              <!-- TAB Two -->
               <div
                 class="tab-pane fade"
                 id="v-pills-life"
@@ -759,10 +732,91 @@
                         <li class="sPkListItem">Dr. A.S. Kireeti</li>
                         <li class="sPkListItem">Dr. Swathi Poornima Madala</li>
                         <li class="sPkListItem">Dr. P.J. Srinivas</li>
-                        <li class="sPkListItem">Dr. D. Laxmi Lalitha</li>
+                        <li class="sPkListItem">Dr. D. Lakshmi Lalitha</li>
                         <li class="sPkListItem">Dr. S.P. Rao</li>
-                        <li class="sPkListItem">Dr. Geetanjali Batmanabane</li>
+                        <li class="sPkListItem">Dr. Gitanjali Batmanabane</li>
                       </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- TAB Three -->
+              <div
+                class="tab-pane"
+                id="v-pills-health"
+                role="tabpanel"
+                aria-labelledby="v-pills-health-tab"
+              >
+                <div class="row">
+                  <div class="section">
+                    <div class="section-title">PCW-1 Facilitators</div>
+                    <div class="members-grid">
+                      <div class="member-card">
+                        <div class="member-name">Dr. Lavanya K.M</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr.V. Nageswara Rao</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr. P. Rajesh</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr.Neeharika Balla</div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="section">
+                    <div class="section-title">PCW-2 Facilitators</div>
+                    <div class="members-grid">
+                      <div class="member-card">
+                        <div class="member-name">Dr. Lavanya Sanaboina</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr. Vasundhara Arigela</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr. Velupula Sri Lakshmi</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr. Ch. Anusha Deepthi</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="section">
+                    <div class="section-title">
+                      Conference Day -1 Moderators
+                    </div>
+                    <div class="members-grid">
+                      <div class="member-card">
+                        <div class="member-name">
+                          Dr.S.V. Venu Gopal Raju
+                        </div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr. Viney Kumar Sayeli</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="section">
+                    <div class="section-title">Conference day-2 Moderators</div>
+                    <div class="members-grid">
+                      <div class="member-card">
+                        <div class="member-name">Dr.K. Jithendra</div>
+                      </div>
+
+                      <div class="member-card">
+                        <div class="member-name">Dr.G. Vahini</div>
+                      </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -810,7 +864,7 @@
                         <li><a href="committe.html">Committees</a></li>
                         <li><a href="team.html">Speakers</a></li>
                         <li><a href="sightseeing.html">Sightseeing</a></li>
-                        <li><a href="apme.html">APME</a></li>
+                        <li><a href="apme.html">APMEA</a></li>
                       </ul>
                     </div>
                   </div>
