updated all pages

--- a/team.html
+++ b/team.html
@@ -451,7 +451,7 @@
               >
                 <span class="td-section-subtitle mb-25">Spekaers</span>
                 <h2 class="td-section-title">
-                  Our Distinguished & Medical Educators
+                  Our Distinguished Medical Educators
                 </h2>
               </div>
             </div>
@@ -524,7 +524,7 @@
                     >
                       <div class="td-team-content">
                         <h3 class="td-team-member-name mb-0">
-                          <a href="team.html">Dr.Krishna G Seshadri </a>
+                          <a href="http://atomicityit.com/demos/asram/uploads/KGS_BriefCV.pdf">Dr. Krishna G Seshadri </a>
                         </h3>
                         <span class="td-team-member-position"
                           >- Dr. G. Gangaraju Oration</span
@@ -579,7 +579,7 @@
                         <h3 class="td-team-member-name mb-0">
                           <a
                             href="https://atomicityit.com/demos/asram/uploads/Aviash.pdf"
-                            >Dr. Avinash Suppe
+                            >Dr. Avinash Supe
                           </a>
                         </h3>
                         <span class="td-team-member-position"
@@ -807,7 +807,7 @@
                     </div>
                   </div>
                   <div class="section">
-                    <div class="section-title">Conference day-2 Moderators</div>
+                    <div class="section-title">Conference Day-2 Moderators</div>
                     <div class="members-grid">
                       <div class="member-card">
                         <div class="member-name">Dr.K. Jithendra</div>
