updated team page

--- a/team.html
+++ b/team.html
@@ -802,7 +802,7 @@
                       </div>
 
                       <div class="member-card">
-                        <div class="member-name">Dr. Viney Kumar Sayeli</div>
+                        <div class="member-name">Dr. Vinay Kumar Sayeli</div>
                       </div>
                     </div>
                   </div>
