--- a/team.html
+++ b/team.html
@@ -633,7 +633,7 @@
                     >
                       <div class="td-team-content">
                         <h3 class="td-team-member-name mb-0">
-                          <a href="team.html">Dr. Sravanan Sanniyasi </a>
+                          <a href="team.html">Dr. Saravanan Sanniyasi </a>
                         </h3>
                         <!-- <span class="td-team-member-position"
                           >- Dr. G. Gangaraju Oration</span
@@ -660,7 +660,7 @@
                         <h3 class="td-team-member-name mb-0">
                           <a
                             href="http://atomicityit.com/demos/asram/uploads/Brief_CV[1].pdf"
-                            >Dr. John Stephan
+                            >Dr. John Stephen
                           </a>
                         </h3>
                         <!-- <span class="td-team-member-position"
@@ -688,7 +688,7 @@
                         <h3 class="td-team-member-name mb-0">
                           <a
                             href="http://atomicityit.com/demos/asram/uploads/Dr.MARGARET%20SHANTHI%20CMC%20VELLORE.pdf"
-                            >Dr. Margaret Shathi
+                            >Dr. Margaret Shanthi
                           </a>
                         </h3>
                         <!-- <span class="td-team-member-position"
